--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,6 @@
   <head>
     <meta charset="UTF-8">
     <title>Control Arduino via Web -  express</title>
-<!--    <script src="/libraries/socket.io/socket.io.js"></script> -->
-    <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
-    <script src="/libraries/p5/p5.js" type="text/javascript"></script>
-
-<!--    <script src="libraries/p5/p5.dom.js" type="text/javascript"></script> -->
-<!--    <script src="libraries/p5/p5.sound.js" type="text/javascript"></script> -->
-
-    <script src="sketch_p5_socket.js" type="text/javascript"></script> 
 
     <style> 
       body {padding: 10px; margin: 30px;} 
@@ -33,27 +25,15 @@
         Valor: <span id="valSlider"></span>
       </div>
     </div>
+    <script src="/libraries/p5/p5.js" type="text/javascript"></script>
+<!--    <script src="libraries/p5/p5.dom.js" type="text/javascript"></script> -->
+<!--    <script src="libraries/p5/p5.sound.js" type="text/javascript"></script> -->
 
-    <script type="text/javascript">
-    // crear objetos
-      var slider = document.getElementById("mySlider");
-      var output = document.getElementById("valSlider");
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/slider.js"></script>
 
-      var socket1;
-      socket1 = io.connect('http://127.0.0.1:3000)', { 'forceNew': true });
+    <script src="sketch_p5_socket.js" type="text/javascript"></script>
 
-      output.innerHTML = slider.value; // Display the default slider value
-
-      // Update the current slider value (each time you drag the slider handle)
-      slider.oninput = function() {
-        output.innerHTML = this.value;
-
-        // enviar via socket
-        socket1.emit('luz', this.value);
-        console.log("Se supone que he enviado socket luz");
-
-      }
-    </script>
 
   </body>
 </html>
